# pyka

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: bench_seek.py
bench/results/: index.json  scan.json
docs/: architecture.md  client-api.md  design.md  doc-task.md  operations.md  roadmap.md
examples/: README.md  consumer.py  producer.py
proto/pyka/v1/: broker.proto
pyka/: __init__.py  log.py
scripts/: cluster.sh  demo.py  gen_proto.sh
src/pyka/: client.py
src/pyka/broker/: __init__.py  admin.py  handler.py  protocol.py  server.py  store.py  tail.py
src/pyka/cli/: broker.py
src/pyka/cluster/: __init__.py  ring.py
src/pyka/storage/: __init__.py  index.py  log.py  record.py  segment.py  types.py
src/pyka/topic/: __init__.py  partitioner.py  policy.py  topic.py
src/pyka/v1/: broker_pb2.py  broker_pb2.pyi  broker_pb2_grpc.py
tests/: test_client.py  test_log.py
tests/broker/: test_admin.py  test_cluster.py  test_consume.py  test_produce.py  test_server.py  test_tail.py
tests/cluster/: test_ring.py
tests/storage/: test_index.py  test_index_recovery.py  test_log.py  test_log_concurrency.py  test_log_recovery.py  test_record.py  test_segment.py  test_segment_index.py
tests/topic/: test_partitioner.py  test_policy.py  test_topic.py
