[project]
name = "pyka"
version = "0.1.0"
description = "pyKA — a mini Kafka: append-only log storage + an asyncio broker, built to learn"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pyka-broker = "pyka.cli.broker:main"

[dependency-groups]
dev = ["pytest>=8", "coverage>=7.15.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
