[project]
# The distribution name is NOT "pyka": that is taken on PyPI, by (of all
# things) an Apache Kafka client. The import name stays `pyka`.
name = "pyka-log"
version = "0.1.1"
description = "A mini Kafka: append-only log storage with a gRPC broker, built to learn"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "andreibel", email = "andreinw12@gmail.com" }]
keywords = ["kafka", "log", "broker", "grpc", "streaming", "append-only"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

# CLIENT dependencies only. `pip install pyka-log` gets Producer, Consumer and
# Admin and nothing else — a client has no business pulling a web framework.
# The broker's own dependencies live in the [broker] extra below.
dependencies = [
    "grpcio>=1.68",
    "protobuf>=5.28",
]

[project.optional-dependencies]
# Everything needed to RUN a broker rather than talk to one.
broker = [
    "grpcio-health-checking>=1.68",
    "grpcio-reflection>=1.68",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.urls]
Homepage = "https://github.com/andreibel/pyKA"
Repository = "https://github.com/andreibel/pyKA"
Documentation = "https://github.com/andreibel/pyKA/blob/main/docs/client-api.md"
Issues = "https://github.com/andreibel/pyKA/issues"

[project.scripts]
pyka-broker = "pyka.cli.broker:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "coverage>=7.15.2",
    "pytest-asyncio>=0.24",
    "grpcio-tools>=1.68",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyka"]

[tool.hatch.build.targets.sdist]
# The sdist carries what is needed to rebuild and verify: sources, the wire
# contract, and the tests. Not the benchmarks or the local cluster scripts.
include = ["src/", "proto/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"          # async test functions need no decorator
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = ["src/pyka/v1/*"]       # generated protobuf stubs are not our code
